course/project/todo/prod_manifests/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-rate
      - pause:
          duration: 10m
      - setWeight: 50
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: PROJECT/FRONT_IMAGE
          resources:
            limits:
              cpu: "250m"
              memory: "200Mi"
          readinessProbe:
            initialDelaySeconds: 15
            periodSeconds: 5
            httpGet:
               path: /health
               port: 3010
