course/project/todo/prod_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3010
